--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-native-community/slider": "^2.0.8",
     "@react-navigation/bottom-tabs": "^5.0.0",
-    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
+    "@types/i18n-js": "^3.0.1",
+    "@types/lodash.memoize": "^4.1.6",
     "@types/react-native-uuid": "^1.4.0",
     "@types/uuid": "^7.0.0",
     "buffer": "^5.5.0",
@@ -27,11 +29,15 @@
     "expo-camera": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-localization": "~8.0.0",
     "expo-web-browser": "~8.0.0",
+    "lodash.memoize": "^4.1.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-qrcode-svg": "^6.0.3",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
