--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "covid19app",
+  "version": "0.0.0",
+  "description": "covid19app for covid19app.org",
+  "author": "",
+  "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -6,34 +11,34 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest --watchAll"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
-    "@expo/vector-icons": "~10.0.0",
+    "@expo/vector-icons": "~10.0.6",
     "@react-native-community/masked-view": "0.1.5",
-    "@react-native-community/slider": "^2.0.8",
-    "@react-navigation/bottom-tabs": "^5.0.0",
-    "@react-navigation/native": "^5.1.0",
-    "@react-navigation/stack": "^5.0.0",
+    "@react-native-community/slider": "^2.0.9",
+    "@react-navigation/bottom-tabs": "^5.2.4",
+    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.6",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "@types/i18n-js": "^3.0.1",
     "@types/lodash.memoize": "^4.1.6",
     "@types/react-native-uuid": "^1.4.0",
-    "@types/uuid": "^7.0.0",
+    "@types/uuid": "^7.0.2",
     "buffer": "^5.5.0",
-    "expo": "~36.0.0",
+    "expo": "~36.0.2",
     "expo-asset": "~8.0.0",
     "expo-camera": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-localization": "~8.0.0",
+    "expo-location": "~8.0.0",
     "expo-web-browser": "~8.0.0",
+    "h3-reactnative": "git+https://github.com/realPrimoh/h3-reactnative.git",
     "lodash.memoize": "^4.1.2",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.5.0",
@@ -43,16 +48,28 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "9.13.3",
     "react-native-uuid": "^1.4.9",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "7.4.3"
+    "react-native-web": "~0.12.2",
+    "react-native-webview": "7.4.3",
+    "s2-geometry": "^1.2.10"
   },
   "devDependencies": {
-    "@types/react": "~16.9.0",
-    "@types/react-native": "~0.60.23",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/jest": "^25.1.4",
+    "@types/react": "^16.9.25",
+    "@types/react-native": "~0.61.23",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.0.0",
-    "typescript": "~3.6.3",
-    "jest-expo": "~36.0.1"
+    "jest-expo": "~36.0.1",
+    "prettier": "^2.0.1",
+    "ts-jest": "^25.2.1",
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
