--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "expo-web-browser": "~8.0.0",
     "h3-reactnative": "git+https://github.com/realPrimoh/h3-reactnative.git",
     "lodash.memoize": "^4.1.2",
-    "native-base": "^2.13.12",
+    "native-base": "2.13.8",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
